--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^2.6.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
